gcc/testsuite/rust/rustc/ui/error-codes/E0029-teach.rs
// compile-flags: -Z teach

fn main() {
    let s = "hoho";

    match s {
        "hello" ..= "world" => {}
// { dg-error ".E0029." "" { target *-*-* } .-1 }
        _ => {}
    }
}

